--- a/generating_piano_music_with_transformer_for_student.ipynb
+++ b/generating_piano_music_with_transformer_for_student.ipynb
@@ -27,8 +27,8 @@
         "id": "QI5g-x4foZls"
       },
       "source": [
-        "# Generating Piano Music with Transformer\n",
-        "### ___Ian Simon, Anna Huang, Jesse Engel, Curtis \"Fjord\" Hawthorne___\n",
+        "# Generating Piano Music with Transformer for student\n",
+        "### ___Ian Simon, Anna Huang, Jesse Engel, Curtis \"Fjord\" Hawthorne___\n reused by Xavier Callens",
         "\n",
         "This Colab notebook lets you play with pretrained [Transformer](https://arxiv.org/abs/1706.03762) models for piano music generation, based on the [Music Transformer](http://g.co/magenta/music-transformer) model introduced by [Huang et al.](https://arxiv.org/abs/1809.04281) in 2018.\n",
         "\n",
